add extended stats rest endpoint with insomnia